--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,12 +5,12 @@
 
     <EditText
         android:id="@+id/et_origin"
-        android:hint="Origin"
+        android:hint="@string/hint_origin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/et_destination"
-        android:hint="Destinarion"
+        android:hint="@string/hint_destination"
         android:layout_below="@id/et_origin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -23,7 +23,7 @@
 
         <Button
             android:id="@+id/bt_find"
-            android:text="Find"
+            android:text="@string/hint_find"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
